# ddd1-midi-hub

./: .gitignore  CMakeLists.txt  README.md  changelog_2026-06-21.txt
.claude/memory/: MEMORY.md  feedback_kb_retrig_quantize.md  feedback_ux_placement.md  project_ddd1_bass_translator.md  project_ddd1_midi_hub.md
Source/: CrateBank.cpp  CrateBank.h  Idea.h  IdeaBank.cpp  IdeaBank.h  PadConfig.h  PatternBank.cpp  PatternBank.h  PatternSetBank.cpp  PatternSetBank.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RatingBank.cpp  RatingBank.h
build_xcode/DDD1MidiHub.xcodeproj/: project.pbxproj
